line segment disappears when using extrude of predefined grease pencil line stroke #62140

Closed
opened 2019-03-02 22:24:18 +01:00 by rainbow trout · 8 comments

System Information
Operating system: windows 10
Graphics card: amd 580

Blender Version
Broken: 2.8 beta date: 2019-03-02 00:57 hash: 490a385c81
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on the default startup.scroll_below_3_and_line_segment_disappears.mp4
Steps:
draw new line
extrude new line, scroll down to 3 (is still working), scroll to 2 and line disappears
Look at extrude count at the bottom of the video
NOTE: has not worked for builds in past week

**System Information** Operating system: windows 10 Graphics card: amd 580 **Blender Version** Broken: 2.8 beta date: 2019-03-02 00:57 hash: 490a385c8124 (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on the default startup.[scroll_below_3_and_line_segment_disappears.mp4](https://archive.blender.org/developer/F6748909/scroll_below_3_and_line_segment_disappears.mp4) Steps: draw new line extrude new line, scroll down to 3 (is still working), scroll to 2 and line disappears Look at extrude count at the bottom of the video NOTE: has not worked for builds in past week
Author

Added subscriber: @salmonking

Added subscriber: @salmonking

#62142 was marked as duplicate of this issue

#62142 was marked as duplicate of this issue

#62141 was marked as duplicate of this issue

#62141 was marked as duplicate of this issue
Antonio Vazquez was assigned by Sebastian Parborg 2019-03-03 15:31:24 +01:00
Antonio Vazquez removed their assignment 2019-03-03 15:52:09 +01:00
Charlie Jolly was assigned by Antonio Vazquez 2019-03-03 15:52:09 +01:00

Added subscribers: @CharlieJolly, @antoniov

Added subscribers: @CharlieJolly, @antoniov

@CharlieJolly Could you take a look?

@CharlieJolly Could you take a look?

This issue was referenced by ae74f89585

This issue was referenced by ae74f89585380a083cdfc70cf12720fde79f6d26
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks @CharlieJolly

Thanks @CharlieJolly
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62140
No description provided.