Fix T62140: GPencil line segment disappears

Remove code for when edge count is 2.